# ddcd-rs

./: Cargo.toml  ddcd.service  ddcd.socket
ddcd/: Cargo.toml
ddcd/src/: lib.rs
ddcutil/: Cargo.toml
ddcutil-sys/: Cargo.toml  build.rs  wrapper.h
ddcutil-sys/src/: lib.rs
ddcutil/src/: lib.rs
