[package]
name = "ddcd"
version = "0.1.0"
authors = ["Michael Zimmermann <sigmaepsilon92@gmail.com>"]
edition = "2018"

[lib]

[dependencies]
bincode = "^1.3"
ddcutil = { path="../ddcutil" }
futures = { version = "^0.3", features=[] }
serde = { version = "^1.0", features=["derive"] }
clap = { git = "https://github.com/clap-rs/clap.git" }
tokio = { version="^1.1", features=["io-util", "macros", "net", "rt"] }
tokio-serde = { version = "^0.8", features=["bincode"] }
tokio-util = { version = "^0.6", features=["codec"] }
listenfd = "0.3"
thiserror = "^1.0"
