[package]
name = "ddcd"
version = "0.1.0"
authors = ["Michael Zimmermann <sigmaepsilon92@gmail.com>"]
edition = "2018"

[lib]

[dependencies]
bincode = "^1.3"
ddcutil = { path="../ddcutil" }
futures = { version = "^0.3", features=[] }
serde = { version = "^1.0", features=["derive"] }
clap = { version = "4.0", features=["derive"] }
tokio = { version="^1.1", features=["io-util", "macros", "net", "rt"] }
tokio-serde = { version = "^0.8", features=["bincode"] }
tokio-util = { version = "^0.7", features=["codec"] }
listenfd = "1.0"
thiserror = "^1.0"
